updated some css

--- a/style.css
+++ b/style.css
@@ -1,9 +1,30 @@
-header {
-  font-family: "Amatic SC",cursive;
-  font-size: 400%;
-}
+
 
 .h1 {
   font-family: "Open Sans", sans-serif;
   font-weight: 300;
+}
+
+#productName {
+  font-family: "Open Sans",sans-serif;
+  font-weight: 700;
+  font-size: 150%;
+  line-height: 70%;
+  text-transform: uppercase;
+}
+
+.storeName {
+  font-family: "Open Sans",sans-serif;
+  font-weight: 600;
+  font-size: 150%;
+  letter-spacing: 2px;
+  line-height: 100%;
+}
+
+.storeInfo {
+  font-family: "Open Sans",sans-serif;
+  font-weight: 300;
+  font-size: 100%;
+  letter-spacing: 2px;
+  line-height: 100%;
 }
