--- a/style.css
+++ b/style.css
@@ -1,35 +1,125 @@
-input {
-  display: inline-block;
-
-}
-
-
-
-.h1 {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 300;
-}
-
-#productName {
-  font-family: "Open Sans",sans-serif;
-  font-weight: 700;
-  font-size: 150%;
-  line-height: 70%;
-  text-transform: uppercase;
-}
-
-.storeName {
-  font-family: "Open Sans",sans-serif;
-  font-weight: 600;
-  font-size: 150%;
-  letter-spacing: 2px;
-  line-height: 100%;
-}
-
-.storeInfo {
+p {
   font-family: "Open Sans",sans-serif;
   font-weight: 300;
   font-size: 100%;
   letter-spacing: 2px;
   line-height: 100%;
+  margin-left: 20px;
+}
+#fishLogo {
+  height: 100px;
+  float: left;
+  margin-left: 15%;
+}
+
+#productName {
+  font-family: "Open Sans",sans-serif;
+  font-weight: 700;
+  font-size: 200%;
+  line-height: 70%;
+  text-transform: uppercase;
+  text-indent: 10px;
+}
+
+#tagline {
+  font-family: "Open Sans",sans-serif;
+  font-weight: 600;
+  font-size: 150%;
+  letter-spacing: 2px;
+  line-height: 100%;
+  text-indent: 10px;
+}
+
+h2 {
+  font-family: "Halant",serif;
+  font-weight: 400;
+  font-size: 150%;
+  line-height: 0%;
+  padding-top: 20px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 13%;
+  height: 100%;
+  background-color: #edafb4;
+  position: fixed;
+  font-family: "Open Sans",sans-serif;
+  font-weight: 300;
+  font-size: 100%;
+  letter-spacing: 2px;
+  line-height: 100%;
+}
+
+.navigationContent a {
+  display: block;
+  padding: 8px 0px 8px 16px;
+  background-color: #edafb4;
+  text-decoration: none;
+  color: black;
+}
+
+.navigationContent a:hover {
+  background-color: #edc9af;
+
+}
+
+.avoidNavBar {
+  padding-left: 15%;
+}
+
+.salmonEvents {
+  list-style-type: none;
+  margin: 15px;
+  padding: 0;
+  font-family: "Open Sans",sans-serif;
+  font-weight: 300;
+  font-size: 100%;
+}
+
+label {
+  display: inline-block;
+  width: 180px;
+}
+
+button {
+  background-color: #ede8af;
+  padding: 5px 10px;
+  font-family: "Open Sans",sans-serif;
+  font-weight: 300;
+  font-size: 100%;
+  border: none;
+}
+
+.storeName {
+  font-family: "Open Sans",sans-serif;
+  font-weight: 600;
+  font-size: 100%;
+  letter-spacing: 2px;
+  line-height: 100%;
+  align: left;
+}
+
+.tableLeft {
+    text-align: left;
+}
+
+.generalText {
+  font-family: "Open Sans",sans-serif;
+  font-weight: 300;
+  font-size: 100%;
+}
+
+#table {
+  width: 60%;
+  border: 1px solid black;
+  vertical-align: middle;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+#table td {
+  padding: 0 20px 0 0;
 }
