--- a/style.css
+++ b/style.css
@@ -70,6 +70,12 @@ nav ul {
   padding-left: 15%;
 }
 
+#cookieImg {
+  height: 250px;
+  float: left;
+  margin-right: 20px;
+}
+
 .salmonEvents {
   list-style-type: none;
   margin: 15px;
@@ -112,7 +118,7 @@ button {
   font-size: 100%;
 }
 
-#table {
+#table, #table2 {
   width: 60%;
   border: 1px solid black;
   vertical-align: middle;
@@ -120,6 +126,11 @@ button {
   border-collapse: collapse;
 }
 
-#table td {
+#table th,#table2 th {
+  text-align: left;
+  padding-left: 5px;
+}
+
+#table td,#table2 td {
   padding: 0 20px 0 0;
 }
